--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2021"
 massa_sdk = { git = "https://github.com/massalabs/massa", rev = "af6a0906c85b5c48961c08d4054195813f132be5", package = "massa_sdk" }
 massa_models = { git = "https://github.com/massalabs/massa", rev = "af6a0906c85b5c48961c08d4054195813f132be5", package = "massa_models" }
 massa_time = { git = "https://github.com/massalabs/massa", rev = "af6a0906c85b5c48961c08d4054195813f132be5", package = "massa_time" }
+massa_serialization = { git = "https://github.com/massalabs/massa", rev = "af6a0906c85b5c48961c08d4054195813f132be5", package = "massa_serialization" }
 tokio = { version = "1", features = ["full"] }
 hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 http-body-util = "0.1"
 form_urlencoded = "1.2.1"
+rocksdb = "0.22.0"
