--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-massa_sdk = { git = "https://github.com/massalabs/massa", rev = "af6a0906c85b5c48961c08d4054195813f132be5", package = "massa_sdk" }
-massa_models = { git = "https://github.com/massalabs/massa", rev = "af6a0906c85b5c48961c08d4054195813f132be5", package = "massa_models" }
-massa_time = { git = "https://github.com/massalabs/massa", rev = "af6a0906c85b5c48961c08d4054195813f132be5", package = "massa_time" }
-massa_serialization = { git = "https://github.com/massalabs/massa", rev = "af6a0906c85b5c48961c08d4054195813f132be5", package = "massa_serialization" }
+massa_sdk = { git = "https://github.com/massalabs/massa", rev = "aec5115b4285e3b15cce946106e1816bda7b6dc1", package = "massa_sdk" }
+massa_models = { git = "https://github.com/massalabs/massa", rev = "aec5115b4285e3b15cce946106e1816bda7b6dc1", package = "massa_models" }
+massa_time = { git = "https://github.com/massalabs/massa", rev = "aec5115b4285e3b15cce946106e1816bda7b6dc1", package = "massa_time" }
+massa_api_exports = { git = "https://github.com/massalabs/massa", rev = "aec5115b4285e3b15cce946106e1816bda7b6dc1", package = "massa_api_exports" }
 tokio = { version = "1", features = ["full"] }
 hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 http-body-util = "0.1"
 form_urlencoded = "1.2.1"
-rocksdb = "0.22.0"
+mysql = "24.0.0"
+serde_json = "1.0"
+serde = "1.0.197"
