--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '3.4'
 services:
   db:
     image: mysql:5.7
@@ -6,21 +6,18 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: 'massa_transfers'
-      # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
-      # You can use whatever password you like
       MYSQL_PASSWORD: 'password'
-      # Password for root access
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
       # <Port exposed> : <MySQL Port running inside container>
-      - '3306:3306'
+      - '3307:3306'
     expose:
       # Opens port 3306 on the container
-      - '3306'
+      - '3307'
       # Where our data will be persisted
     volumes:
-      - my-db:/var/lib/mysql
+      - massa-transfers-db:/var/lib/mysql
 # Names our volume
 volumes:
-  my-db:
+  massa-transfers-db:
