Use env file in rust and chain id with mainnet

--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
-MYSQL_DATABASE='massa_transfers'
-MYSQL_USER='user'
-MYSQL_PASSWORD='password'
+DATABASE_URL='mysql://user:password@localhost:3306/massa_transfers'
 MASSA_NODE_API_IP="127.0.0.1"
 MASSA_NODE_API_PUBLIC_PORT="33035"
-INDEXER_API_IP="0.0.0.0"
-INDEXER_API_PORT="4444"
-MYSQL_PORT="3306"
+INDEXER_API="0.0.0.0:4444"
