Add more fields to the indexer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-massa_sdk = { git = "https://github.com/massalabs/massa", rev = "d1b371cbf426731aec89f73220bd6f6dcaa0d6d8", package = "massa_sdk" }
-massa_models = { git = "https://github.com/massalabs/massa", rev = "d1b371cbf426731aec89f73220bd6f6dcaa0d6d8", package = "massa_models" }
-massa_time = { git = "https://github.com/massalabs/massa", rev = "d1b371cbf426731aec89f73220bd6f6dcaa0d6d8", package = "massa_time" }
-massa_api_exports = { git = "https://github.com/massalabs/massa", rev = "d1b371cbf426731aec89f73220bd6f6dcaa0d6d8", package = "massa_api_exports" }
+massa_sdk = { git = "https://github.com/massalabs/massa", rev = "8057ee050d4d6cb1ee03b167e36588dacd78746f", package = "massa_sdk" }
+massa_models = { git = "https://github.com/massalabs/massa", rev = "8057ee050d4d6cb1ee03b167e36588dacd78746f", package = "massa_models" }
+massa_time = { git = "https://github.com/massalabs/massa", rev = "8057ee050d4d6cb1ee03b167e36588dacd78746f", package = "massa_time" }
+massa_api_exports = { git = "https://github.com/massalabs/massa", rev = "8057ee050d4d6cb1ee03b167e36588dacd78746f", package = "massa_api_exports" }
 tokio = { version = "1", features = ["full"] }
 hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
@@ -19,3 +19,4 @@ mysql = "24.0.0"
 serde_json = "1.0"
 serde = "1.0.197"
 dotenv = "0.15.0"
+time = "0.3.31"
