--- a/transfers-indexer.yml
+++ b/transfers-indexer.yml
@@ -59,10 +59,18 @@ paths:
                     - from: "AU1Fp7uBP2TXxDty2HdTE3ZE3XQ4cNXnG3xuo8TkQLJtyxC7FKhx"
                       to: "AU1iUsXqfqAfhBw7Bc4yMm2nw3AzLdo9f6bsMTm7no3UZpzBvuNR"
                       amount: "0.000000001"
+                      succeed: false,
+                      fee: "0.000000001",
+                      block_id: "B1c5HYaFtVozAu2mKhr1XrVcvse5Ffwt2feew6RmPoHkWgc1BGx",
+                      operation_time: "2024-02-28T12:49:38.000000000",
                       context: 
                         operation_id: "O12Bve9WYNApCDCcJFGy4giJSNTzhEBVoTtyxDFWxMFYF1iJYYbd"
                     - from: "AU1Fp7uBP2TXxDty2HdTE3ZE3XQ4cNXnG3xuo8TkQLJtyxC7FKhx"
                       to: "AU12FoGv3tAQ7pbMVZFL5TRnVwmSGDYcb69vGbG8s9cppSFVAER6n"
                       amount: "0.000000001"
+                      succeed: false,
+                      fee: "0.000000001",
+                      block_id: "B1c5HYaFtVozAu2mKhr1XrVcvse5Ffwt2feew6RmPoHkWgc1BGx",
+                      operation_time: "2024-02-28T12:49:38.000000000",
                       context: 
                         operation_id: "O12uZnkLMsmeiCJpgkP6agX5VYTvsNp7xdNLs3ew5Wrp6ytfiPdZ"
