Add flag to save only success transfers flase by default

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL='mysql://user:password@localhost:3306/massa_transfers'
 MASSA_NODE_API_IP="127.0.0.1"
 MASSA_NODE_API_PUBLIC_PORT="33035"
 INDEXER_API="0.0.0.0:4444"
+SAVE_ONLY_SUCCESS_TRANSFERS="false"
