Add timeout node increased

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MASSA_NODE_API_IP="127.0.0.1"
 MASSA_NODE_API_PUBLIC_PORT="33035"
 INDEXER_API="0.0.0.0:4444"
 SAVE_ONLY_SUCCESS_TRANSFERS="false"
+NODE_API_TIMEOUT="10000"
